@@ -313,14 +313,19 @@ typedef enum rpmTag_e {
     RPMTAG_FILEVERIFYFLAGS	= 1045,
     RPMTAG_ARCHIVESIZE		= 1046,
     RPMTAG_PROVIDENAME		= 1047,
-#define	RPMTAG_PROVIDES RPMTAG_PROVIDENAME	/* backward comaptibility */
+#define	RPMTAG_PROVIDES RPMTAG_PROVIDENAME
+#define	RPMTAG_P	RPMTAG_PROVIDENAME
     RPMTAG_REQUIREFLAGS		= 1048,
     RPMTAG_REQUIRENAME		= 1049,
+#define	RPMTAG_REQUIRES RPMTAG_REQUIRENAME
+#define	RPMTAG_D	RPMTAG_REQUIRENAME
     RPMTAG_REQUIREVERSION	= 1050,
     RPMTAG_NOSOURCE		= 1051, /*!< internal */
     RPMTAG_NOPATCH		= 1052, /*!< internal */
     RPMTAG_CONFLICTFLAGS	= 1053,
     RPMTAG_CONFLICTNAME		= 1054,
+#define	RPMTAG_CONFLICTS RPMTAG_CONFLICTNAME
+#define	RPMTAG_C	RPMTAG_CONFLICTNAME
     RPMTAG_CONFLICTVERSION	= 1055,
     RPMTAG_DEFAULTPREFIX	= 1056, /*!< internal - deprecated */
     RPMTAG_BUILDROOT		= 1057, /*!< internal */
@@ -350,7 +355,8 @@ typedef enum rpmTag_e {
     RPMTAG_POSTUNPROG		= 1088,
     RPMTAG_BUILDARCHS		= 1089,
     RPMTAG_OBSOLETENAME		= 1090,
-#define	RPMTAG_OBSOLETES RPMTAG_OBSOLETENAME	/* backward comaptibility */
+#define	RPMTAG_OBSOLETES RPMTAG_OBSOLETENAME
+#define	RPMTAG_O	RPMTAG_OBSOLETENAME
     RPMTAG_VERIFYSCRIPTPROG	= 1091,
     RPMTAG_TRIGGERSCRIPTPROG	= 1092,
     RPMTAG_DOCDIR		= 1093, /*!< internal */
